# test-game

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/core/: Game.h  Hud.h  IGame.h  Utils.h
include/core/Events/: EventDispatcher.h  IEvent.h
include/sprites/: Background.h  Bee.h  Cloud.h  Hud.h  ISprite.h  Tree.h
src/: main.cpp
src/core/: Game.cpp  Hud.cpp
src/sprites/: Background.cpp  Bee.cpp  Cloud.cpp  Hud.cpp  Tree.cpp
